third_party/rust/thiserror/v1/crate/tests/ui/no-display.stderr
error[E0599]: the method `as_display` exists for reference `&NoDisplay`, but its trait bounds were not satisfied
   --> tests/ui/no-display.rs:7:9
    |
4   | struct NoDisplay;
    | ----------------- doesn't satisfy `NoDisplay: std::fmt::Display`
...
7   | #[error("thread: {thread}")]
    |         ^^^^^^^^^^^^^^^^^^ method cannot be called on `&NoDisplay` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `NoDisplay: std::fmt::Display`
            which is required by `&NoDisplay: DisplayAsDisplay`
note: the following trait must be implemented
   --> $RUST/core/src/fmt/mod.rs
    |
    | / pub trait Display {
    | |     /// Formats the value using the given formatter.
    | |     ///
    | |     /// # Examples
...   |
    | |     fn fmt(&self, f: &mut Formatter<'_>) -> Result;
    | | }
    | |_^
